<resources>
    <string name="app_name">FoodCourt Pay Client</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome</string>
    <string name="welcome2">Eat and Drink\nHowever You Like</string>
    <string name="welcome3">With FoodCourt App, top up your\nFoodCourt Card, anywhere and\nanytime. Make it yours</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="no_account">I don\'t have an account yet</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Re-Enter Password</string>
    <string name="continue_text">Continue</string>
    <string name="balance">Balance</string>
    <string name="kartu_makan_jkt">Kartu Makan JKT</string>
    <string name="rp">Rp. </string>
    <string name="saldo_value">...........</string>
    <string name="hello">Hello,</string>
    <string name="exclamation">!</string>
    <string name="pay">Pay</string>
    <string name="history">History</string>
    <string name="more">More</string>
    <string name="card">Card</string>
    <string name="see_history">See History</string>
    <string name="receipt">Receipt</string>
    <string name="pesanan">Pesanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_total">Harga Total</string>
    <string name="food">Food</string>
    <string name="x">x</string>
    <string name="total">Total</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="pin">PIN</string>\
    <string name="enter_pin">Enter your 6-digit pin</string>
    <string name="success">Success!</string>
    <string name="thanks_paying">Thank you for paying</string>
    <string name="go_home">Go Back Home</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank">Bank</string>
    <string name="gopay">GoPay</string>
    <string name="ovo">OVO</string>
    <string name="linkaja">LinkAja</string>
    <string name="dana">Dana</string>
    <string name="topup">Top Up</string>
    <string name="transaction_history">Transaction History</string>
    <string name="scan">Scan QR</string>
    <string name="payment">Payment</string>
    <string name="create_pin">Create Pin</string>
    <string name="create_6_digit_pin">Create your 6-digit pin</string>
    <string name="confirm">Confirm</string>
    <string name="re_enter_pin">Re Enter Pin</string>
    <string name="blank">......</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="bank_payment">Bank Payment</string>
    <string name="cashier">Cashier</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="bank_topup">Bank Topup</string>
    <string name="how_to_bank">How to Top Up with Bank Payment</string>
    <string name="admin_fee">Admin Fee:</string>
    <string name="min_top_up">Min. Top Up</string>
    <string name="_1_000">1.000</string>
    <string name="_10_000">10.000</string>
    <string name="bank1">1. Open your</string>
    <string name="bank2"><![CDATA[2. Select Pembelian > Top Up FoodCourtApp > Customer]]></string>
    <string name="bank3">3. Enter your registered FoodCourtApp phone number</string>
    <string name="bank4">4. Enter your top up amount</string>
    <string name="bank5">5. Enter your pin and complete your transaction</string>
    <string name="wallet">wallet</string>
    <string name="receipt_bill">Receipt Bill</string>
    <string name="bill_total">Bill Total</string>
    <string name="enter_nominal">Enter the total nominal to be paid</string>
    <string name="billing">Billing</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation2">Make sure you\'ve entered the correct nominal</string>
    <string name="order">Order</string>
    <string name="logout">Logout</string>
</resources>