<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/tv_bank_name"
            android:text="@string/bank"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/primary_red"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/darker_grey"
            android:id="@+id/expandable_layout"
            android:visibility="visible"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_admin_fee"
                android:text="@string/admin_fee"
                android:textStyle="bold"
                style="@style/text_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_rp1"
                android:text="@string/rp"
                app:layout_constraintStart_toEndOf="@id/tv_min_topup"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/text_style"
                android:layout_marginStart="3dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_value_admin"
                android:text="@string/_1_000"
                app:layout_constraintStart_toEndOf="@id/tv_rp1"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/text_style" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_min_topup"
                android:text="@string/min_top_up"
                android:textStyle="bold"
                style="@style/text_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_admin_fee" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_rp2"
                android:text="@string/rp"
                app:layout_constraintStart_toEndOf="@id/tv_min_topup"
                app:layout_constraintTop_toBottomOf="@id/tv_admin_fee"
                style="@style/text_style"
                android:layout_marginStart="3dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_value_topup"
                android:text="@string/_10_000"
                app:layout_constraintStart_toEndOf="@id/tv_rp2"
                app:layout_constraintTop_toBottomOf="@id/tv_admin_fee"
                style="@style/text_style" />

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_1"
                android:text="@string/bank1"
                style="@style/text_style"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_topup" />

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_1a"
                android:text="@string/bank"
                app:layout_constraintStart_toEndOf="@id/tv_1"
                app:layout_constraintTop_toBottomOf="@id/tv_min_topup"
                style="@style/text_style"
                android:layout_marginStart="3dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_2"
                android:text="@string/bank2"
                style="@style/text_style"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_3"
                android:text="@string/bank3"
                style="@style/text_style"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_4"
                android:text="@string/bank4"
                style="@style/text_style"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_5"
                android:text="@string/bank5"
                style="@style/text_style"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_4"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>