<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".layout.SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/iv_logo"
        android:src="@drawable/foodcourtapp_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:hint="@string/name"
        android:id="@+id/edt_name"
        android:background="@drawable/custom_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        style="@style/edt_regist_fields" />

    <EditText
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        android:hint="@string/email"
        android:id="@+id/edt_email"
        android:background="@drawable/custom_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        style="@style/edt_regist_fields" />

    <EditText
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:hint="@string/phone_number"
        android:id="@+id/edt_phone"
        android:background="@drawable/custom_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="phone"
        style="@style/edt_regist_fields" />

    <EditText
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/edt_phone"
        android:hint="@string/password"
        android:id="@+id/edt_password"
        android:background="@drawable/custom_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        style="@style/edt_regist_fields" />

    <EditText
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:hint="@string/confirm_password"
        android:id="@+id/edt_confirm_password"
        android:background="@drawable/custom_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        style="@style/edt_regist_fields" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_radius"
        android:backgroundTint="@color/primary_red"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_account_already"
        android:textColor="@color/primary_red"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/i_already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"/>


</androidx.constraintlayout.widget.ConstraintLayout>