<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".layout.CreatePinActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pin"
        android:text="@string/create_pin"
        style="@style/text_style"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_enter_pin"
        android:text="@string/create_6_digit_pin"
        android:textSize="16sp"
        style="@style/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pin"
        android:layout_marginTop="12dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_pin"
        android:hint="@string/pin"
        android:id="@+id/edt_pin"
        android:maxLength="6"
        android:textSize="24sp"
        android:inputType="numberPassword"
        android:gravity="center"
        android:layout_marginTop="24dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_pin"
        android:id="@+id/edt_re_pin"
        android:maxLength="6"
        android:textSize="24sp"
        android:inputType="numberPassword"
        android:gravity="center"
        android:hint="@string/re_enter_pin" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_proceed"
        android:backgroundTint="@color/secondary_red"
        android:background="@drawable/btn_radius"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edt_re_pin"
        android:layout_marginTop="34dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        style="@style/progress_bar_style"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>