<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".layout.PaymentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_card"
        android:text="@string/receipt_bill"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_card"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="18dp"
        android:id="@+id/cardMenu"
        android:backgroundTint="@color/primary_red">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_name"
                android:text="@string/card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_rp"
                android:text="@string/rp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saldo"
                android:text="@string/saldo_value"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/card_name"
                app:layout_constraintStart_toEndOf="@id/tv_rp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_wallet"
                android:src="@drawable/ic_baseline_credit_card_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/wallet" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@color/darker_grey"
        app:layout_constraintTop_toBottomOf="@id/cardMenu"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_receipt"
        android:text="@string/bill_total"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_marginTop="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_desc_nominal"
        style="@style/text_style"
        android:text="@string/enter_nominal"
        app:layout_constraintTop_toBottomOf="@id/tv_receipt"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edt_amount"
        android:background="@drawable/custom_edt"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_nominal"
        android:layout_marginTop="16dp"
        android:hint="@string/rp"
        android:gravity="center"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_proceed"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edt_amount"
        android:text="@string/proceed_to_pay"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_radius"
        android:backgroundTint="@color/secondary_red"/>
</androidx.constraintlayout.widget.ConstraintLayout>